Added links to CBETA source texts to DA 30 and MA 1-5.

--- a/01_agama/dirgha/DA_30-11.md
+++ b/01_agama/dirgha/DA_30-11.md
@@ -6,11 +6,12 @@ base: ../../
 previous: DA_30-10.html
 next: DA_30-12.html
 ---
+
 # [The Long Discourses](index.html)
 ## 30. Description of the World
 ### Chapter 11: Three Interim Eons
 
-1\. The Buddha told the monks, “There are three interim eons. What are the three? The first is called the eon of warfare, the second is called the eon of famine, and the third is called the eon of plague.
+1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “There are three interim eons. What are the three? The first is called the eon of warfare, the second is called the eon of famine, and the third is called the eon of plague.
 {:#p1}
 
 #### The Eon of Warfare
@@ -91,10 +92,17 @@ next: DA_30-12.html
 25\. “These are the three medium eons.”
 {:#p25}
 
+--
+
+### Notes
+
+1. {:#n1}This is Chapter 11 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0144a18" target="_blank">T1.1.144a18-5a3</a>). [\[back\]](#ref1)
+
 ---
 
 Translator: Charles Patton
 {: .translator}
 Last Revised: 29 June 2022
 {: .revised}
+
 ---
