--- a/01_agama/dirgha/DA_30-12.md
+++ b/01_agama/dirgha/DA_30-12.md
@@ -6,12 +6,13 @@ base: ../../
 previous: DA_30-12.html
 next: index.html
 ---
+
 # [The Long Discourses](index.html)
 ## 30. Description of the World
 ### Chapter 12: The Origins of the World
 #### The Repopulation of the World
 
-1\. The Buddha told the monks, “After the catastrophe of fire has passed and the earth and heavens of this world are about to reform, the remaining sentient beings’ merits, actions, and lives come to an end. At the end of their lives in the Ābhāsvara Heaven, they are born into an empty Brahma abode. Their minds are stained by attachment to the place. Delighted by that abode, they wish other sentient beings would be born there with them. After they make that wish, the merits, actions, and lives of other sentient beings come to an end. When their bodies break up and their lives end in the Ābhāsvara Heaven, they’re born in that empty Brahma abode.
+1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “After the catastrophe of fire has passed and the earth and heavens of this world are about to reform, the remaining sentient beings’ merits, actions, and lives come to an end. At the end of their lives in the Ābhāsvara Heaven, they are born into an empty Brahma abode. Their minds are stained by attachment to the place. Delighted by that abode, they wish other sentient beings would be born there with them. After they make that wish, the merits, actions, and lives of other sentient beings come to an end. When their bodies break up and their lives end in the Ābhāsvara Heaven, they’re born in that empty Brahma abode.
 {:#p1}
 
 2\. “The first being born in the Brahma Heaven thinks to himself, ‘I am the Brahma King, the Great Brahma Heaven King! I have no creator, I’ve spontaneously come to be, and I’m subject to no one. I’m the highest sovereign of a thousand worlds, skilled in various meanings, my wealth is bountiful, and I’m the creator of all things. I’m both father and mother to all sentient beings.’
@@ -29,7 +30,7 @@ next: index.html
 6\. “Some time after that, the world again changes. The merits, actions, and lives of more sentient beings in the Ābhāsvara Heaven come to an end, and they are born here when their lives end. All are born here spontaneously, and they are nourished by joy. Their bodies glow with their own light, and they have the miraculous ability to fly. Their happiness has no obstacles, and their life spans are very long.
 {:#p6}
 
-7\. “In that time, there’s no male or female, noble or ignoble, high or low, or beings with different names. That host is born together in the world, so they are called ‘host born.’[\[1\]](#n1){:#ref1}
+7\. “In that time, there’s no male or female, noble or ignoble, high or low, or beings with different names. That host is born together in the world, so they are called ‘host born.’[\[2\]](#n2){:#ref2}
 {:#p7}
 
 8\. “At that point, the Earth has a spontaneously produced flavor of earth, which solidifies into earth that’s like ghee. When that flavor of earth is produced, it’s likewise. It’s like butter that tastes as sweet as honey.
@@ -102,7 +103,7 @@ next: index.html
 29\. “Again, what is the reason for called them ‘[good deeds of] 1,000 rays of light’? Some people don’t kill, don’t steal, don’t engage in sex, don’t lie, and don’t drink alcohol. Because of these causes, their hearts are good, and they’re joyful. When their bodies break up and their lives end, they become the sun god. Dwelling in the sun palace, they possess 1,000 rays of light. For these reasons, they are called the good deeds of 1,000 rays of light.
 {:#p29}
 
-30\. “Sixty kṣaṇas are called a lava. Thirty lavas are called a muhūrta. A hundred muhūrtas are called an upamā.[\[2\]](#n2){:#ref2} The sun palace moves south for six months. The sun moves fifteen kilometers to the south, not going beyond Jambudvīpa. The sun travels north in the same way.
+30\. “Sixty kṣaṇas are called a lava. Thirty lavas are called a muhūrta. A hundred muhūrtas are called an upamā.[\[3\]](#n3){:#ref3} The sun palace moves south for six months. The sun moves fifteen kilometers to the south, not going beyond Jambudvīpa. The sun travels north in the same way.
 {:#p30}
 
 #### Ten Reasons Sunlight Is Hot
@@ -237,7 +238,7 @@ As described by the Buddha sun.”
 
 #### The Waxing and Waning of the Moon
 
-69\. “What’s the reason the moon palace gradually decreases and disappears? There are three causes for the moon palace to decrease and disappear. First is when the moon rises diagonally.[\[3\]](#n3){:#ref3} This is the first reason the moon decreases and disappears.
+69\. “What’s the reason the moon palace gradually decreases and disappears? There are three causes for the moon palace to decrease and disappear. First is when the moon rises diagonally.[\[4\]](#n4){:#ref4} This is the first reason the moon decreases and disappears.
 {:#p69}
 
 70\. “Furthermore, the great ministers put on blue robes inside the moon palace. Where they stand becomes blue, so the moon decreases. This is the second reason the moon disappears day by day.
@@ -278,10 +279,10 @@ As described by the Buddha sun.”
 81\. “Jambudvīpa is named after the Jambu [tree]. Under it, there’s a mountain of gold that’s 30 yojanas tall and causes the Jambu tree to grow, so it’s called Jambu’s gold. The Jambu tree has fruit that resembles mushrooms and tastes as sweet as honey.
 {:#p81}
 
-82\. “That tree has five large corners.[\[4\]](#n4){:#ref4} On it’s four sides are four corners, and one corner is above it. Gandharvas eat the fruit on the east corner. People from the seven countries eat the fruit on the south corner. The first country is Kuru,  the second is Koravya (?), third is Videha, fourth is Suvideha (?), fifth is Manda (?), sixth is Bārāṇasī, and seventh is Parikhā (?). Sea serpents eat the fruit on the west corner. Animals eat the fruit on the  north corner. Gods of the stellar constellations eat the fruit from the top corner.
+82\. “That tree has five large corners.[\[5\]](#n5){:#ref5} On it’s four sides are four corners, and one corner is above it. Gandharvas eat the fruit on the east corner. People from the seven countries eat the fruit on the south corner. The first country is Kuru,  the second is Koravya (?), third is Videha, fourth is Suvideha (?), fifth is Manda (?), sixth is Bārāṇasī, and seventh is Parikhā (?). Sea serpents eat the fruit on the west corner. Animals eat the fruit on the  north corner. Gods of the stellar constellations eat the fruit from the top corner.
 {:#p82}
 
-83\. “North of the seven great countries, there are seven great black mountains. The first is Bare Land, second is White Stork, third is Palace Protector, fourth is Sage Mountain, fifth is High Mountain, sixth is Dhyāna Mountain, and seventh is Land Mountain. On these seven black mountains, there are seven priestly sages. These seven sages who live on them are named Good Lord, Good Light, Palace Protector, Sage, Palace Defender, Gaṇana, and Increase.”[\[5\]](#n5){:#ref5}
+83\. “North of the seven great countries, there are seven great black mountains. The first is Bare Land, second is White Stork, third is Palace Protector, fourth is Sage Mountain, fifth is High Mountain, sixth is Dhyāna Mountain, and seventh is Land Mountain. On these seven black mountains, there are seven priestly sages. These seven sages who live on them are named Good Lord, Good Light, Palace Protector, Sage, Palace Defender, Gaṇana, and Increase.”[\[6\]](#n6){:#ref6}
 {:#p83}
 
 #### The Devolution of Sentient Beings
@@ -384,7 +385,7 @@ As described by the Buddha sun.”
 
 #### The Lineages of Kings
 
-112\. “The first chief of the people had a son named Treasure.[\[6\]](#n6){:#ref6} Treasure had a son name Superb Flavor. Superb Flavor had a son named Tranquil Purification. Tranquil Purification had a son named Born from the Crown. Born from the Crown had a son named Good Conduct. Good Conduct had a son named Household Conduct. Household Conduct had a son named Wonderful Flavor. Wonderful Flavor had a son named Lord of Flavor. Lord of Flavor had a son named Water Sage. Water Sage had a son named Hundred Knowledge. Hundred Knowledge had a son named Fondness. Fondness had a son named Good Desire. Good Desire had a son named Cutting Bonds. Cutting Bonds had a son named Great Cutting Bonds. Great Cutting Bonds had a son named Treasure Trove. Treasure Trove had a son named Sudarśana. Sudarśana had a son named Aśoka. Aśoka had a son named Island. Island had a son named Planted Life. Planted Life had a son named Hill. Hill had a son named Spirit God. Spirit God had a son named Bestowing Power. Bestowing Power had a son named Solid Cart. Solid Cart had a son named Ten Carts. Ten Carts had a son named Hundred Carts. Hundred Carts had a son named Solid Bow. Solid Bow had a son named Hundred Bows. Hundred Bows had a son named Nurturance. Nurturance had a son named Good Intent.
+112\. “The first chief of the people had a son named Treasure.[\[7\]](#n7){:#ref7} Treasure had a son name Superb Flavor. Superb Flavor had a son named Tranquil Purification. Tranquil Purification had a son named Born from the Crown. Born from the Crown had a son named Good Conduct. Good Conduct had a son named Household Conduct. Household Conduct had a son named Wonderful Flavor. Wonderful Flavor had a son named Lord of Flavor. Lord of Flavor had a son named Water Sage. Water Sage had a son named Hundred Knowledge. Hundred Knowledge had a son named Fondness. Fondness had a son named Good Desire. Good Desire had a son named Cutting Bonds. Cutting Bonds had a son named Great Cutting Bonds. Great Cutting Bonds had a son named Treasure Trove. Treasure Trove had a son named Sudarśana. Sudarśana had a son named Aśoka. Aśoka had a son named Island. Island had a son named Planted Life. Planted Life had a son named Hill. Hill had a son named Spirit God. Spirit God had a son named Bestowing Power. Bestowing Power had a son named Solid Cart. Solid Cart had a son named Ten Carts. Ten Carts had a son named Hundred Carts. Hundred Carts had a son named Solid Bow. Solid Bow had a son named Hundred Bows. Hundred Bows had a son named Nurturance. Nurturance had a son named Good Intent.
 {:#p112}
 
 113\. “From the time of Good Intent, there were ten tribes of noble wheel-turning kings whose lineages was continuous and unbroken. The first [tribe] was named Gaṇotsāha (?), the second was named Uttarapati (?), the third was named Aśmaka, the fourth was named Gandhāra (?), the fifth was named Kaliṅga, the sixth was named Campā, the seventh was named Kuru, the eighth was named Pañcāla, the ninth was named Mithilā, and the tenth was named Ikṣvāku (?).
@@ -461,19 +462,20 @@ Are the best among gods and humans!”
 132\. Thereupon, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p132}
 
-133\. The Long Discourses *is complete. Homage to all knowledge and the happiness of all beings. May sentient beings dwell in the unconditioned, and let me be an example for them!*
+133\. The Long Discourses <em>is complete. Homage to all knowledge and the happiness of all beings. May sentient beings dwell in the unconditioned, and let me be an example for them!</em>
 {:#p133}
 
 ---
 
-### Endnotes
+### Notes
 
-1. {:#n1}*host born*. C. 眾生. This gloss seems to indicate the reasoning for what is commonly assumed to be the early Chinese translation of S. *sattva*. It appears to have had a direct Indic equivalent in this passage other than *sattva*. [\[back\]](#ref1)
-2. {:#n2}These are S. units of time. A *kṣaṇa* is a moment, perhaps a second or two in the length. A *lava* is roughly equivalent to a minute or two, and a *muhūrta* is similar to an hour. [\[back\]](#ref2)
-3. {:#n3}*diagonally*. C. 維. The C. can mean the corners of a square, which is extended in Buddhist texts to mean the directions between the cardinal points (northeast, southeast, northwest, and southwest). Here, the term is contrasted against “perfect square” (正方) in the passage below, so I take it to mean a cube that’s turned edgewise. The author(s) imagined the moon palace to be a cube that only appeared round from a distance, so they reasoned that the waning moon was a rotating cube slowly turning edgewise. The waxing moon was a cube seen edgewise that was turning to fully face the viewer. [\[back\]](#ref3)
-4. {:#n4}*corner*. C. 觚. The Taisho reading 孤 means “orphan,” which doesn’t seem to make sense. I’ve followed the Japanese translator in adopting the alternate reading here. Perhaps the C. is attempting to express the idea of a part of the tree that juts out, allowing access to its fruit. [\[back\]](#ref4)
-5. {:#n5}Both of these lists are found in a couple other C. sources, but they are quite different. I’ve translated the C. names literally here. The one transliteration (伽那那) seems likely to be S. *gaṇana*, which had the same pronunciation in G. [\[back\]](#ref5)
-6. {:#n6}There are multiple versions of this lineage found in various Buddhist sources that vary widely in both the names and the length of the list. Here, the names are largely translated to C., and I’ve translated them as well for the time being since I lack a matching parallel to use as confirmation for possible Indic names. [\[back\]](#ref6)
+1. {:#n1}This is Chapter 1 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0145a04" target="_blank">T1.1.145a4-9c23</a>). [\[back\]](#ref1)
+2. {:#n2}<em>host born</em>. C. 眾生. This gloss seems to indicate the reasoning for what is commonly assumed to be the early Chinese translation of S. <em>sattva</em>. It appears to have had a direct Indic equivalent in this passage other than <em>sattva</em>. [\[back\]](#ref2)
+3. {:#n3}These are S. units of time. A <em>kṣaṇa</em> is a moment, perhaps a second or two in the length. A *lava* is roughly equivalent to a minute or two, and a <em>muhūrta</em> is similar to an hour. [\[back\]](#ref3)
+4. {:#n4}<em>diagonally</em>. C. 維. The C. can mean the corners of a square, which is extended in Buddhist texts to mean the directions between the cardinal points (northeast, southeast, northwest, and southwest). Here, the term is contrasted against “perfect square” (正方) in the passage below, so I take it to mean a cube that’s turned edgewise. The author(s) imagined the moon palace to be a cube that only appeared round from a distance, so they reasoned that the waning moon was a rotating cube slowly turning edgewise. The waxing moon was a cube seen edgewise that was turning to fully face the viewer. [\[back\]](#ref4)
+5. {:#n5}<em>corner</em>. C. 觚. The Taisho reading 孤 means “orphan,” which doesn’t seem to make sense. I’ve followed the Japanese translator in adopting the alternate reading here. Perhaps the C. is attempting to express the idea of a part of the tree that juts out, allowing access to its fruit. [\[back\]](#ref5)
+6. {:#n6}Both of these lists are found in a couple other C. sources, but they are quite different. I’ve translated the C. names literally here. The one transliteration (伽那那) seems likely to be S. <em>gaṇana</em>, which had the same pronunciation in G. [\[back\]](#ref6)
+7. {:#n7}There are multiple versions of this lineage found in various Buddhist sources that vary widely in both the names and the length of the list. Here, the names are largely translated to C., and I’ve translated them as well for the time being since I lack a matching parallel to use as confirmation for possible Indic names. [\[back\]](#ref7)
 
 ---
 
@@ -481,4 +483,5 @@ Translator: Charles Patton
 {: .translator}
 Last Revised: 3 July 2022
 {: .revised}
+
 ---
