--- a/01_agama/dirgha/DA_30-8.md
+++ b/01_agama/dirgha/DA_30-8.md
@@ -6,15 +6,16 @@ base: ../../
 previous: DA_30-7.html
 next: DA_30-9.html
 ---
+
 # [The Long Discourses](index.html)
 ## 30. Description of the World
 ### Chapter 8: The Trāyastriṃśa Gods
 #### Geography
 
-1\. The Buddha told the monks, “The city of the Trāyastriṃśa gods sits at the summit of Sumeru the mountain king, and it’s 80,000 yojanas across. That city has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures. The city is a hundred yojanas tall, and it’s sixty yojanas wide at the top. The city gates are sixty yojanas high and thirty yojanas wide. The gates are five hundred yojanas apart from each other, and each gate is guarded by five hundred yakṣa spirits who protect the Trāyastriṃśa gods.
+1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “The city of the Trāyastriṃśa gods sits at the summit of Sumeru the mountain king, and it’s 80,000 yojanas across. That city has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures. The city is a hundred yojanas tall, and it’s sixty yojanas wide at the top. The city gates are sixty yojanas high and thirty yojanas wide. The gates are five hundred yojanas apart from each other, and each gate is guarded by five hundred yakṣa spirits who protect the Trāyastriṃśa gods.
 {:#p1}
 
-2\. “The gold walls have silver gates, the silver walls have gold gates … and countless birds sing to each other peacefully *as before*.
+2\. “The gold walls have silver gates, the silver walls have gold gates … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p2}
 
 3\. “Inside that great city, there’s a smaller city that’s 60,000 yojanas across. That city has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations are made of the seven treasures. That city is a hundred yojanas tall and sixty yojanas wide. The city’s gates are five hundred yojanas apart from each other, sixty yojanas high, and thirty yojanas wide. Each gate is guarded by five hundred yakṣa spirits who protect the Trāyastriṃśa gods.
@@ -35,7 +36,7 @@ next: DA_30-9.html
 8\. “The city’s seven walls have four gates. The gates have balustrades, and the seven walls have towers and terraces all around above them. They’re surrounded by scenic parks with forests and lakes where myriad treasure flowers grow in a mix of assorted colors. The rows of treasure trees are laden with flowers and fruit, and the fragrance they produce blows in all four directions to the delight of people. Ducks, geese, cakra birds, and other rare kinds of birds in countless thousands sing to each other peacefully.
 {:#p8}
 
-9\. “The palace of the Nāga Airāvaṇa is outside that smaller city, and it’s 6,000 yojanas across. The palace has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully *as before*.
+9\. “The palace of the Nāga Airāvaṇa is outside that smaller city, and it’s 6,000 yojanas across. The palace has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p9}
 
 10\. “Inside the city of Sudarśana, there’s a Sudharma Hall that’s a hundred yojanas across. It has seven balustrades, seven nettings, and seven rows of trees encircling with decorations made of the seven treasures.
@@ -44,52 +45,52 @@ next: DA_30-9.html
 11\. “The foundation under that hall is pure gold and covered with beryl. Inside the hall, the pillars are ten yojanas around and a hundred yojanas tall. The Lord of Gods’ throne is laid beneath the pillars. It’s one yojana across, has a mix of assorted colors, and made of the seven treasures. His throne is also as soft as heavenly cloth. Sixteen thrones are arranged to the left and right of his throne.
 {:#p11}
 
-12\. “The hall has four gates, and it’s encircled by a balustrade made of the seven treasures. There are stairways that are five hundred yojanas across, and the gates have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of seven treasures … and countless birds sing to each other peacefully *as before*.
+12\. “The hall has four gates, and it’s encircled by a balustrade made of the seven treasures. There are stairways that are five hundred yojanas across, and the gates have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p12}
 
-13\. “North of Sudarśana Hall, the palace hall of the Lord of Gods is 1,000 yojanas across. The palace has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully *as before*.
+13\. “North of Sudarśana Hall, the palace hall of the Lord of Gods is 1,000 yojanas across. The palace has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p13}
 
-14\. “East of Sudarśana Hall, there’s a forest park named Pāruṣaka that’s 1,000 yojanas across.[\[1\]](#n1){:#ref1} The park has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully *as before*.
+14\. “East of Sudarśana Hall, there’s a forest park named Pāruṣaka that’s 1,000 yojanas across.[\[2\]](#n2){:#ref2} The park has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p14}
 
 15\. “Inside Pāruṣaka Park, there are two stone seats decorated with heavenly gold. The first is called Bhadra, and the second is called Subhadra. Each is fifty yojanas across, and the stone is as soft as heavenly cloth.
 {:#p15}
 
-16\. “South of Sudarśana Hall, there’s a forest park named Citraratha that’s 1,000 yojanas across.[\[2\]](#n2){:#ref2} The park has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully *as before*.
+16\. “South of Sudarśana Hall, there’s a forest park named Citraratha that’s 1,000 yojanas across.[\[3\]](#n3){:#ref3} The park has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p16}
 
 17\. “Inside that park, there are two stone seats made of the seven treasures. The first is called Citra, and the second is called Sucitra. Each is fifty yojanas across, and the seats are as soft as heavenly cloth.
 {:#p17}
 
-18\. “To the west of Sudarśana Hall, there’s a forest park called Miśrakā that’s 1,000 yojanas across.[\[3\]](#n3){:#ref3} The park has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully *as before*.
+18\. “To the west of Sudarśana Hall, there’s a forest park called Miśrakā that’s 1,000 yojanas across.[\[4\]](#n4){:#ref4} The park has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p18}
 
-19\. “Inside that park, there are two stone seats. The first is called Sudarśana, and the second is called Anusudarśana (?).[\[4\]](#n4){:#ref4} They’re decorated with heavenly gold and made of the seven treasures. Each is fifty yojanas across and as soft as heavenly cloth.
+19\. “Inside that park, there are two stone seats. The first is called Sudarśana, and the second is called Anusudarśana (?).[\[5\]](#n5){:#ref5} They’re decorated with heavenly gold and made of the seven treasures. Each is fifty yojanas across and as soft as heavenly cloth.
 {:#p19}
 
-20\. “To the north of Sudarśana Hall, there’s a forest park called Nandana that’s 1,000 yojanas across.[\[5\]](#n5){:#ref5} The park has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully *as before*.
+20\. “To the north of Sudarśana Hall, there’s a forest park called Nandana that’s 1,000 yojanas across.[\[6\]](#n6){:#ref6} The park has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p20}
 
 21\. “Inside that park, there are two stone seats. The first is called Upananda, and the second is called Nandana. They have decorations made of coral, each is fifty yojanas across, and the seats are as soft as heavenly cloth.
 {:#p21}
 
-22\. “Between Pāruṣaka Park and Citraratha Park, there’s Nanda Lake that’s a hundred yojanas across. Its water is crystal clear and devoid of any pollution. It’s ringed by seven stepped embankments made of many treasures, and it has seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures. The lake has stairs with handrails on four sides, and it’s encircled by balustrades studded with the seven treasures … and countless birds sing to each other peacefully *as before*.
+22\. “Between Pāruṣaka Park and Citraratha Park, there’s Nanda Lake that’s a hundred yojanas across. Its water is crystal clear and devoid of any pollution. It’s ringed by seven stepped embankments made of many treasures, and it has seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures. The lake has stairs with handrails on four sides, and it’s encircled by balustrades studded with the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p22}
 
 23\. “Four types of flowers grow in that lake: Blue, yellow, red, and white. Other colors like crimson and light blue are mixed with them, too. A single petal of those flowers is a yojana long, and their fragrance is sweet-smelling a yojana away. Their roots are like wheel hubs, and they produce sap that’s as white as milk and tastes as sweet as honey. That lake also has forest parks on all four sides.
 {:#p23}
 
-24\. “Between Miśrakā Park and Nandana Park, there’s a tree called Pārijāta that’s seven yojanas around and a hundred yojanas tall. It’s limbs and leaves spread out in all four directions to cover fifty yojanas. There’s open ground around the tree that’s five hundred yojanas across. It then has seven palace walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of seven treasures … and countless birds sing to each other peacefully *as before*.
+24\. “Between Miśrakā Park and Nandana Park, there’s a tree called Pārijāta that’s seven yojanas around and a hundred yojanas tall. It’s limbs and leaves spread out in all four directions to cover fifty yojanas. There’s open ground around the tree that’s five hundred yojanas across. It then has seven palace walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p24}
 
-25\. “The remaining Trāyastriṃśa Heaven palace halls are 1,000 yojanas across. The palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees encircling them with decorations made of seven treasures … and countless birds sing to each other peacefully *as before*.
+25\. “The remaining Trāyastriṃśa Heaven palace halls are 1,000 yojanas across. The palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees encircling them with decorations made of seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p25}
 
-26\. “Those palace halls are sometimes 900, 800 … or at least a hundred yojanas across. The palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees encircling them with decorations made of seven treasures … and countless birds sing to each other peacefully *as before*.
+26\. “Those palace halls are sometimes 900, 800 … or at least a hundred yojanas across. The palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees encircling them with decorations made of seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p26}
 
-27\. “The lesser heavenly palaces are a hundred yojanas, ninety, eighty … or at least twenty yojanas across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees encircling them with decorations made of seven treasures … and countless birds sing to each other peacefully *as before*.
+27\. “The lesser heavenly palaces are a hundred yojanas, ninety, eighty … or at least twenty yojanas across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees encircling them with decorations made of seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p27}
 
 28\. “North of Sudarśana Hall, there are two stairways to the palace hall of the Lord of Gods. East of Sudarśana Hall, there are two stairways to Pāruṣaka Park. Again, there are stairways to Citraratha Park, stairways to Miśrakā Park, stairways to Nandana Park, stairways to Nandana Lake, stairways to the Pārijāta Tree, stairways to the palaces of the Trāyastriṃśa gods, stairways to the palaces of other gods, and stairways to the palace of Nāga King Airāvaṇa.
@@ -136,12 +137,12 @@ next: DA_30-9.html
 41\. “Why is that hall named ‘Sudharma Hall’? Up in this hall, they ponder the wonderful Dharma and experience pure happiness, so it’s called Sudharma Hall. Why is that tree named the ‘Pārijāta Tree’? This tree has a spirit named Manda that’s always playing music to entertain itself. Therefore, it’s called Pārijāta. Also, that huge tree spreads its limbs in all four directions, and its flowers and leaves are abundant like great treasure clouds, so it’s called Pārijāta.
 {:#p41}
 
-42\. “Śakra the Lord of Gods has ten great gods who always follow and serve him on his left and right. Who are the ten? The first is named Indraka, the second is named Gopīkā, the third is named Virūḍhaka, the fourth is named Virūpākṣa, the fifth is named Dāraka (?), the sixth is named Bala (?), the seventh is named Jīvaka (?), the eighth is named Rohaṇa (?), the ninth is named Mūtra (?), and the tenth is named Nando (?).[\[6\]](#n6){:#ref6} Such is the great miraculous power and majesty possessed by Śakra the Lord of Gods.
+42\. “Śakra the Lord of Gods has ten great gods who always follow and serve him on his left and right. Who are the ten? The first is named Indraka, the second is named Gopīkā, the third is named Virūḍhaka, the fourth is named Virūpākṣa, the fifth is named Dāraka (?), the sixth is named Bala (?), the seventh is named Jīvaka (?), the eighth is named Rohaṇa (?), the ninth is named Mūtra (?), and the tenth is named Nando (?).[\[7\]](#n7){:#ref7} Such is the great miraculous power and majesty possessed by Śakra the Lord of Gods.
 {:#p1}
 
 #### Things the World and Heaven Have in Common
 
-43\. “The people of Jambudvīpa prize water flowers that are gentle and sweet-smelling, such as utpala flowers, padma flowers, kumuda flowers, puṇḍarīka flowers, and sugandha flowers. The land flowers that they prize are atimuktaka flowers, campaka flowers, pāṭala flowers, sumanā flowers, vārṣika flowers, and maiden flowers.[\[7\]](#n7){:#ref7} Those in Godānīya, Uttarakuru, and Pūrvavideha, the nāga palaces, and garuḍa palaces [prize] the same the water and land flowers.
+43\. “The people of Jambudvīpa prize water flowers that are gentle and sweet-smelling, such as utpala flowers, padma flowers, kumuda flowers, puṇḍarīka flowers, and sugandha flowers. The land flowers that they prize are atimuktaka flowers, campaka flowers, pāṭala flowers, sumanā flowers, vārṣika flowers, and maiden flowers.[\[8\]](#n8){:#ref8} Those in Godānīya, Uttarakuru, and Pūrvavideha, the nāga palaces, and garuḍa palaces [prize] the same the water and land flowers.
 {:#p43}
 
 44\. “In the asura palaces, [they prize] gentle and sweet-smelling water flowers, such as utpala flowers, padma flowers, kumuda flowers, and puṇḍarīka flowers. The land flowers [that they prize are] beautiful flowers like bimba (?) flowers, great bimba flowers, kākāra (?) flowers, great kākāra flowers, mandāra flowers, and great mandāra flowers. The four god kings, Trāyastriṃśa gods, Yama gods, Tuṣita gods, Nirmāṇarati gods, and Paranirmitavaśavartin gods prize the same water and land flowers.
@@ -159,7 +160,7 @@ next: DA_30-9.html
 48\. “The radiance of the palaces of the four god kings and their walled city, jewelry, clothing, and bodies is not like that of the Trāyastriṃśa gods. The radiance of the Trāyastriṃśa gods is not like that of the Yama gods. The radiance of the Yama gods is not like that of the Tuṣita gods. The radiance of the Tuṣita gods is not like that of the Nirmāṇarati gods. The radiance of the Nirmāṇarati gods is not like that of the Paranirmitavaśavartin gods. The radiance of the Paranirmitavaśavartin gods is not like that of the palace halls, clothing, and bodies of the Brahmakāyika gods.
 {:#p48}
 
-49\. “The radiance of the palace halls, clothing, and bodies of the Brahmakāyika gods is not like that of the Ābhāsvara gods. The radiance of the Ābhāsvara gods is not like that of the Śubhakṛtsnā gods. The radiance of the Śubhakṛtsnā gods is not like that of Bṛhatphala gods. The radiance of the Bṛhatphala gods is not like that of the Asaṃjñika gods. The radiance of the Asaṃjñika gods is not like that of the Avṛha gods. The radiance of the Avṛha gods is not like that of the Atapa gods. The radiance of the Atapa gods is not like that of the Sudarśana gods. The radiance of the Sudarśana gods is not like that of the Mahāsudarśana gods. The radiance of the Mahāsudarśana gods is not like that of Akaniṣṭha gods. The radiance of the Akaniṣṭha gods is not like that of the Earth Sovereign gods.[\[8\]](#n8){:#ref8} The radiance of the Earth Sovereign gods is not like that of the Buddha.
+49\. “The radiance of the palace halls, clothing, and bodies of the Brahmakāyika gods is not like that of the Ābhāsvara gods. The radiance of the Ābhāsvara gods is not like that of the Śubhakṛtsnā gods. The radiance of the Śubhakṛtsnā gods is not like that of Bṛhatphala gods. The radiance of the Bṛhatphala gods is not like that of the Asaṃjñika gods. The radiance of the Asaṃjñika gods is not like that of the Avṛha gods. The radiance of the Avṛha gods is not like that of the Atapa gods. The radiance of the Atapa gods is not like that of the Sudarśana gods. The radiance of the Sudarśana gods is not like that of the Mahāsudarśana gods. The radiance of the Mahāsudarśana gods is not like that of Akaniṣṭha gods. The radiance of the Akaniṣṭha gods is not like that of the Earth Sovereign gods.[\[9\]](#n9){:#ref9} The radiance of the Earth Sovereign gods is not like that of the Buddha.
 {:#p49}
 
 50\. “From the radiance of a firefly to that of a Buddha, the sum total of those lights is not like that of the radiance of the truth of suffering, truth of its formation, truth of its cessation, and truth of the path. Therefore, monks, if you want to pursue radiance, you should pursue the radiance of the truth of suffering, truth of its formation, truth of its cessation, and truth of the path. You should train in them.
@@ -167,7 +168,7 @@ next: DA_30-9.html
 
 #### The Bodies and Clothing of People and Gods
 
-51\. “The bodies of people in Jambudvīpa are three and a half cubits long, and their clothing is seven cubits long and three and a half cubits wide.[\[9\]](#n9){:#ref9} The bodies of people in Godānīya and Pūrvavideha are also three and a half cubits long, and their clothing is seven cubits long and three and a half cubits wide. The bodies of people in Uttarakuru are seven cubits long, and their clothing is fourteen cubits long and seven cubits wide. Their clothing weighs one ounce.
+51\. “The bodies of people in Jambudvīpa are three and a half cubits long, and their clothing is seven cubits long and three and a half cubits wide.[\[10\]](#n10){:#ref10} The bodies of people in Godānīya and Pūrvavideha are also three and a half cubits long, and their clothing is seven cubits long and three and a half cubits wide. The bodies of people in Uttarakuru are seven cubits long, and their clothing is fourteen cubits long and seven cubits wide. Their clothing weighs one ounce.
 {:#p51}
 
 52\. “The bodies of asuras are one yojana long, and their clothing is two yojanas long and one yojana wide. Their clothing weighs a quarter ounce. The bodies of the four god kings are half of a yojana long, and their clothing is a yojana long and half of a yojana wide. Their clothing weighs half of an ounce. The bodies of the Trāyastriṃśa gods are one yojana long, and their clothing is two yojanas long and one yojana wide. Their clothing weighs a quarter ounce. The bodies of the Yama gods are two yojanas long, and their clothing is four yojanas long and two yojanas wide. Their clothing weighs three twenty-fourths of an ounce. The bodies of the Tuṣita gods are four yojanas long, and their clothing is eight yojanas long and four yojanas wide. Their clothing weighs a little more than a twenty-fourth of an ounce. The bodies of the Nirmāṇarati gods are eight yojanas long, and their clothing is sixteen yojanas long and eight yojanas wide. Their clothing weighs a twenty-fourth of an ounce. The bodies of the Paranirmitavaśavartin gods are sixteen yojanas long, and their clothing is thirty-two yojanas long and sixteen yojanas wide. Their clothing weighs a forty-eighth of an ounce. The gods above them each wear clothing that fits their bodies.
@@ -465,7 +466,7 @@ Will become my equals!’”
 136\. The Buddha told the monks, “The desire realm has twelve kinds of sentient beings. What are the twelve? First are those in hell. Second are those born as animals. Third are the hungry ghosts. Fourth are humans. Fifth are the asuras. Sixth are the four god kings. Seventh are the Trāyastriṃśa gods. Eighth are the Yama gods. Ninth are the Tuṣita gods. Tenth are the Nirmāṇarati gods. Eleventh are the Paranirmitavaśavartin gods. Twelfth are the Māra gods.
 {:#p136}
 
-137\. “The form realm has twenty-two kinds of sentient beings. [What are the twenty-two?] First are the Brahmakāyika gods, second are the Brahmapurohita gods, third are the Brahmapāriṣadhya gods, and fourth are the Mahābrahma gods. Fifth are the Ābha gods, sixth are the Parīttābha gods, seventh are the Apramāṇābha gods, and eighth are the Ābhāsvara gods. Ninth are the Śubha gods, tenth are the Pārīttaśubha gods, eleventh are the Apramāṇāśubha gods, and twelfth are the Śubhakṛtsna gods. Thirteenth are the Adornment gods, fourteenth are the Lesser Adornment gods, fifteenth are the Measureless Adornment gods, and sixteenth are the Adornment Bṛhatphala gods.[\[10\]](#n10){:#ref10} Seventeenth are the Asaṃjñika gods, eighteenth are the Avṛha gods, nineteenth are the Atapa gods, twentieth are the Sudarśana gods, twenty-first are the Mahāsudarśana gods, and twenty-second are the Akaniṣṭha gods.
+137\. “The form realm has twenty-two kinds of sentient beings. [What are the twenty-two?] First are the Brahmakāyika gods, second are the Brahmapurohita gods, third are the Brahmapāriṣadhya gods, and fourth are the Mahābrahma gods. Fifth are the Ābha gods, sixth are the Parīttābha gods, seventh are the Apramāṇābha gods, and eighth are the Ābhāsvara gods. Ninth are the Śubha gods, tenth are the Pārīttaśubha gods, eleventh are the Apramāṇāśubha gods, and twelfth are the Śubhakṛtsna gods. Thirteenth are the Adornment gods, fourteenth are the Lesser Adornment gods, fifteenth are the Measureless Adornment gods, and sixteenth are the Adornment Bṛhatphala gods.[\[11\]](#n11){:#ref11} Seventeenth are the Asaṃjñika gods, eighteenth are the Avṛha gods, nineteenth are the Atapa gods, twentieth are the Sudarśana gods, twenty-first are the Mahāsudarśana gods, and twenty-second are the Akaniṣṭha gods.
 {:#p137}
 
 138\. “The formless realm has four kinds of sentient beings. What are the four? First are the gods who cognize space, second are the gods who cognize consciousness, third are the gods who cognize nothingness, and fourth are the gods who cognize having and not having conception.”
@@ -552,7 +553,7 @@ Will become my equals!’”
 161\. “Those clouds are sometimes five kilometers, ten kilometers, fifteen kilometers, twenty kilometers … 2,000 kilometers away from the Earth. The exception is right after the eon begins when the clouds go up to the Ābhāsvara Heaven.
 {:#p161}
 
-162\. “Lightning has four kinds. What are the four? Eastern lightning, which is called Body Light. Southern lightning, which is called Hard to Destroy. Western lightning, which is called Streaming Fire. Northern lightning, which is called Fixed Illumination.[\[11\]](#n11){:#ref11}
+162\. “Lightning has four kinds. What are the four? Eastern lightning, which is called Body Light. Southern lightning, which is called Hard to Destroy. Western lightning, which is called Streaming Fire. Northern lightning, which is called Fixed Illumination.[\[12\]](#n12){:#ref12}
 {:#p162}
 
 163\. “Why are there these lightning flashes in the clouds and sky? Sometimes, Body Light and Hard to Destroy touch each other. Sometimes Body Light and Stream of Fire touch each other. Sometimes the Body Light and Fixed Illumination touch each other. Sometimes Hard to Destroy and Stream of Fire touch each other. Sometimes Hard to Destroy and Fixed Illumination touch each other. Sometimes Stream of Fire and Fixed Illumination touch each other. These are the reasons that there are lightning flashes in the sky and clouds.
@@ -578,19 +579,20 @@ Will become my equals!’”
 
 ---
 
-### Endnotes
+### Notes
 
-1. {:#n1}*Pāruṣaka*. C. 麤澁, P. Phārusaka, S. Pāruṣaka. The C. translation means “rough,” which matches the meaning of S. paruṣa. Alternate C. sources agree on this meaning, and one (T 25) transliterates the name as paruṣa (波婁沙). S. Pāruṣa, on the other hand, is the name of a tree. This confusion might happen in G. or T., which drop long vowels. As we’ll see below, DĀ 30 glosses the names of these parks as referring to the effects they have on the gods who visit them. [\[back\]](#ref1)
-2. {:#n2}*Citraratha*. The Chinese translates the name as “Painting (畫) Pleasure (樂),” which translates S. citra-ratha literally. This agrees with the name of a Trāyastriṃśa park in S. and P. sources. [\[back\]](#ref2)
-3. {:#n3}*Miśrakā*. C. 雜. The Chinese translates this name as “Mixed,” which matches the meaning of S. miśra. Miśrakāvana is the name of a Trāyastriṃśa park in S. and P. sources. [\[back\]](#ref3)
-4. {:#n4}*Anusudarśana (?)*. C. 順善見. The Chinese translates the second seat’s name as “Following Good View.” Alternate Chinese translations of this passage render it as “Smaller Good View” (小善見). It must have been smaller, meant for a servant to sit on, perhaps. I’ve guessed that 順 translates the prefix S. anu-, but I’ve found no Indic parallels to use for confirmation. [\[back\]](#ref4)
-5. {:#n5}*Nandana*. C. 大喜. The Chinese translates the park’s name as “Great Joy.” In P. and S. sources, a fourth Trāyastriṃśa park is called Nandana, which can mean “rejoicing.” [\[back\]](#ref5)
-6. {:#n6}This list of ten names was transliterated to C. I’ve reconstructed it to possible Sanskrit equivalents. The first four names of this list are more certain than the remainder, which are only educated guesses. There are two other Chinese translations of the list, but after the fourth name, they vary widely with each other. There are no Indic parallels extant to my knowledge. [\[back\]](#ref6)
-7. {:#n7}*maiden flowers*. Ch. 童女花. Presumably the Indic name of this flower was also a word for girls or young women, but it elludes me. [\[back\]](#ref7)
-8. {:#n8}*Earth Sovereign gods*. Ch. 地自在天. This is not a standard class of gods that appear anywhere else in DĀ. An alternate Taisho reading changes it to read Paranirmitavaśavartin (他化自在天), but this doesn’t make sense coming after the Akaniṣṭha gods. I’ve left the passage as-is. [\[back\]](#ref8)
-9. {:#n9}*cubits*. C. 肘. A cubit was an ancient measure of length, taking the average distance from a man’s elbow to the tip of his fingers. It varied from place to place but was approximately 18 inches (45.7 cm). [\[back\]](#ref9)
-10. {:#n10}*Adornment gods*. C. 嚴飾天. This group of four heavens, which are the fourth dhyāna heavens in this list, appears unique. I’m not sure what the S. equivalent was, so I’ve translated it to English. [\[back\]](#ref10)
-11. {:#n11}This passage has a couple alternate C. translations, but they vary widely from this version, and they are largely translated rather than transliterated. The original Indic is unclear, so I’ve translated the C. names literally. [\[back\]](#ref11)
+1. {:#n1}This is Chapter 8 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0131a03" target="_blank">T1.1.131a3-7a23</a>). [\[back\]](#ref1)
+2. {:#n2}<em>Pāruṣaka</em>. C. 麤澁, P. Phārusaka, S. Pāruṣaka. The C. translation means “rough,” which matches the meaning of S. paruṣa. Alternate C. sources agree on this meaning, and one (T 25) transliterates the name as paruṣa (波婁沙). S. Pāruṣa, on the other hand, is the name of a tree. This confusion might happen in G. or T., which drop long vowels. As we’ll see below, DĀ 30 glosses the names of these parks as referring to the effects they have on the gods who visit them. [\[back\]](#ref2)
+3. {:#n3}<em>Citraratha</em>. The Chinese translates the name as “Painting (畫) Pleasure (樂),” which translates S. citra-ratha literally. This agrees with the name of a Trāyastriṃśa park in S. and P. sources. [\[back\]](#ref3)
+4. {:#n4}<em>Miśrakā</em>. C. 雜. The Chinese translates this name as “Mixed,” which matches the meaning of S. miśra. Miśrakāvana is the name of a Trāyastriṃśa park in S. and P. sources. [\[back\]](#ref4)
+5. {:#n5}<em>Anusudarśana (?)</em>. C. 順善見. The Chinese translates the second seat’s name as “Following Good View.” Alternate Chinese translations of this passage render it as “Smaller Good View” (小善見). It must have been smaller, meant for a servant to sit on, perhaps. I’ve guessed that 順 translates the prefix S. anu-, but I’ve found no Indic parallels to use for confirmation. [\[back\]](#ref5)
+6. {:#n6}<em>Nandana</em>. C. 大喜. The Chinese translates the park’s name as “Great Joy.” In P. and S. sources, a fourth Trāyastriṃśa park is called Nandana, which can mean “rejoicing.” [\[back\]](#ref6)
+7. {:#n7}This list of ten names was transliterated to C. I’ve reconstructed it to possible Sanskrit equivalents. The first four names of this list are more certain than the remainder, which are only educated guesses. There are two other Chinese translations of the list, but after the fourth name, they vary widely with each other. There are no Indic parallels extant to my knowledge. [\[back\]](#ref7)
+8. {:#n8}<em>maiden flowers</em>. Ch. 童女花. Presumably the Indic name of this flower was also a word for girls or young women, but it elludes me. [\[back\]](#ref8)
+9. {:#n9}<em>Earth Sovereign gods</em>. Ch. 地自在天. This is not a standard class of gods that appear anywhere else in DĀ. An alternate Taisho reading changes it to read Paranirmitavaśavartin (他化自在天), but this doesn’t make sense coming after the Akaniṣṭha gods. I’ve left the passage as-is. [\[back\]](#ref9)
+10. {:#n10}<em>cubits</em>. C. 肘. A cubit was an ancient measure of length, taking the average distance from a man’s elbow to the tip of his fingers. It varied from place to place but was approximately 18 inches (45.7 cm). [\[back\]](#ref10)
+11. {:#n11}<em>Adornment gods</em>. C. 嚴飾天. This group of four heavens, which are the fourth dhyāna heavens in this list, appears unique. I’m not sure what the S. equivalent was, so I’ve translated it to English. [\[back\]](#ref11)
+12. {:#n12}This passage has a couple alternate C. translations, but they vary widely from this version, and they are largely translated rather than transliterated. The original Indic is unclear, so I’ve translated the C. names literally. [\[back\]](#ref12)
 
 ---
 
@@ -598,4 +600,5 @@ Translator: Charles Patton
 {: .translator}
 Last Revised: 28 June 2022
 {: .revised}
+
 ---
