--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -75,7 +75,7 @@ next: MA_003.html
 
 ### Notes
 
-1. {:#n1} Direct parallels to this <em>sūtra</em> include <a href="https://suttacentral.net/an7.69" target="_blank">AN 7.69</a>, EĀ 39.2, and T28. [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0422a18" target="_blank">T26.1.422a18-c8</a>. Direct parallels to this <em>sūtra</em> include <a href="https://suttacentral.net/an7.69" target="_blank">AN 7.69</a>, EĀ 39.2, and T28. [\[back\]](#ref1)
 2. {:#n2} <em>Trāyastriṃśa Heaven</em>. C.三十三天, G. <em>trayatriśa</em>, P. <em>tāvatiṃsa</em>, S. <em>trāyastriṃśa</em>. The C. translates S. <em>trāyastriṃśa</em> lit. as “Heaven of the Thirty-Three.” This was a Buddhist heaven where thirty-two Vedic gods and Indra reside at the top of Mount Sumeru. [\[back\]](#ref2)
 3. {:#n3} <em>pārijāta</em>. C. 晝度 (EMC <em>tɪəu-do</em>), G. ?, P. <em>pāricchattaka</em>, S. <em>pārijātaka</em>. Previously, I believed that the C. was perhaps a partial transliteration (<em>-jāta</em>), based on the Mandarin pronunciation of 晝度 (M. <em>zhòudù</em>), but the EMC pronunciation (EMC <em>tɪəu-do</em>) doesn’t support this idea. It seems instead to be an interpretive translation that means lit. “day liberation,” which we find in EĀ, too. In any case, I’ve decided to replace the C. with the S. name.<br/>
 This is also the present-day name for <a href="https://en.wikipedia.org/wiki/Nyctanthes_arbor-tristis" target="_blank"><em>Nyctanthes arbor-tristis</em></a>, which is commonly called the night-flowering jasmine tree in English. Perhaps more relevant to this <em>sūtra</em>, however, is the sacred Parijat tree located in the modern village of Kintoor of Uttar Pradesh in India. This Parijat tree is actually a Baobab tree estimated to be 800 years old and from a species native to Africa. Local Hindu legends claim that it descends from a tree brought from the heavens by Arjun, or that it was a gift made by Lord Krishna. It’s existence suggests that there was a sacred tree tradition that dates back at least to classical times. This <em>sūtra</em> may be a Buddhist adaptation of this Vedic tradition. While Buddhists created their own sacred tree connected to the Buddha’s awakening, they apparently felt the need to incorporate this sacred tree as well. [\[back\]](#ref3)
