--- a/01_agama/madhyama/MA_004.md
+++ b/01_agama/madhyama/MA_004.md
@@ -120,7 +120,7 @@ The monks then accepted the teaching and listened.
 
 ### Notes
 
-1. {:#n1} Parallels include [AN 7.15](https://suttacentral.net/an7.15){: target="_blank"}, EA 39.3, and T29. [\[Back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0424a13" target="_blank">T26.1.424a13-5a14</a>. Parallels include [AN 7.15](https://suttacentral.net/an7.15){: target="_blank"}, EA 39.3, and T29. [\[Back\]](#ref1)
 2. {:#n2} *remains prostrate*. Lit. “constantly lies down.” The impression given by the series of examples that follows is that the water is a shallow river or pond in which a person can stand up and walk but would be submerged if they lie down in it. [\[Back\]](#ref2)
 
 ---
