--- a/01_agama/dirgha/DA_30-10.md
+++ b/01_agama/dirgha/DA_30-10.md
@@ -6,13 +6,13 @@ base: ../../
 previous: DA_30-9.html
 next: DA_30-11.html
 ---
+
 # [The Long Discourses](index.html)
 ## 30. Description of the World
 ### Chapter 10: War
-
 #### Vemacitrin’s Bonds
 
-1\. The Buddha told the monks, “Once, the gods and asuras went to war. At the time, Śakra the Lord of Gods gave the Trāyastriṃśa gods this order: ‘All of you, go and do battle with them. If you are victorious, tie up the asura Vemacitrin with five bonds and bring him to the Sudharma Meeting Hall. I want to look at him.’ Accepting Lord Śakra’s instructions, the Trāyastriṃśa gods equipped themselves [with armor and weapons].
+1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “Once, the gods and asuras went to war. At the time, Śakra the Lord of Gods gave the Trāyastriṃśa gods this order: ‘All of you, go and do battle with them. If you are victorious, tie up the asura Vemacitrin with five bonds and bring him to the Sudharma Meeting Hall. I want to look at him.’ Accepting Lord Śakra’s instructions, the Trāyastriṃśa gods equipped themselves [with armor and weapons].
 {:#p1}
 
 2\. “The asura Vemacitrin gave the asuras this order: ‘All of you, go and do battle with them. If you are victorious, tie up Śakra the Lord of Gods with five bonds and bring him to the Saptaśirīṣa Meeting Hall. I want to look at him.’ Accepting the asura Vemacitrin’s instructions, the asuras equipped themselves [with armor and weapons].
@@ -261,7 +261,7 @@ Don’t injure those two birds!’
 40\. The Buddha told the monks, “Once the Asura [King Rāhu] thought to himself, ‘I have great authority, and my miraculous powers aren’t few, but the Trāyastriṃśa, sun, and moon gods are always in the sky roam around my summit freely. Now, I think I’ll take the sun and the moon and make them into earrings so I could travel freely!’
 {:#p40}
 
-41\. “The Asura King’s anger flared, and he thought about the asura \*Prahata.[\[1\]](#n1){:#ref1} The asura \*Prahata then thought to himself, ‘The Asura King is thinking of me now! We should quickly get ready!’ He ordered those to his right and left to equip themselves with weapons. He then rode a treasure chariot to the Asura King while surrounded by a countless host of asuras. He went before the Asura King and then stood to one side.
+41\. “The Asura King’s anger flared, and he thought about the asura \*Prahata.[\[2\]](#n2){:#ref2} The asura \*Prahata then thought to himself, ‘The Asura King is thinking of me now! We should quickly get ready!’ He ordered those to his right and left to equip themselves with weapons. He then rode a treasure chariot to the Asura King while surrounded by a countless host of asuras. He went before the Asura King and then stood to one side.
 {:#p41}
 
 42\. “The [Asura] King also thought about the asura Śambara. The asura Śambara  then thought to himself, ‘The [Asura] King is thinking of me now! We should quickly get ready!’ He ordered those to his right and left to equip themselves with weapons. He then rode a treasure chariot to the Asura King while surrounded by a countless host of asuras. He went before the Asura King and then stood to one side.
@@ -341,9 +341,10 @@ Don’t injure those two birds!’
 
 ---
 
-### Endnotes
+### Notes
 
-1. {:#n1}*\*Prahata*. C. 捶打. His name is here translated to mean “to beat” or “strike” (e.g. with a fist). I believe this is same asura name that was transliterated in Chapter 6 as C. 波羅呵. Reading his name as equivalent to S. \*Prahata would make sense of both. [\[back\]](#ref1)
+1. {:#n1}This is Chapter 10 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0141a21" target="_blank">T1.1.141a21-4a12</a>). [\[back\]](#ref1)
+2. {:#n2}<em>\*Prahata</em>. C. 捶打. His name is here translated to mean “to beat” or “strike” (e.g. with a fist). I believe this is same asura name that was transliterated in Chapter 6 as C. 波羅呵. Reading his name as equivalent to S. \*Prahata would make sense of both. [\[back\]](#ref2)
 
 ---
 
@@ -351,4 +352,5 @@ Translator: Charles Patton
 {: .translator}
 Last Revised: 29 June 2022
 {: .revised}
+
 ---
