--- a/01_agama/dirgha/DA_30-9.md
+++ b/01_agama/dirgha/DA_30-9.md
@@ -6,13 +6,13 @@ base: ../../
 previous: DA_30-8.html
 next: DA_30-10.html
 ---
+
 # [The Long Discourses](index.html)
 ## 30. Description of the World
 ### Chapter 9: The Three Catastrophes
-
 #### The Four Measureless Eons
 
-1\. The Buddha told the monks, “There are four periods that last a long time, that are measureless and limitless. The number of years, months, and days can’t be calculated.
+1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “There are four periods that last a long time, that are measureless and limitless. The number of years, months, and days can’t be calculated.
 {:#p1}
 
 2\. “What are the four? First is the gradual conflagration of the world. When it destroys the world, it’s a very long period that’s measureless and limitless. The number of years, months, and days can’t be calculated. Second is the period of void after the world’s destruction. There’s no world for a very long time, and it extends for a great distance. The number of years, months, and days can’t be calculated. Third is the initial arising of heaven and earth. When the world is forming, it’s a very long period. The number of years, months, and days can’t be calculated. Fourth, the period after heaven and earth lasts after it forms is a very long time that’s measureless and limitless. The number of years, months, and days can’t be calculated.”
@@ -45,7 +45,7 @@ next: DA_30-10.html
 
 #### The Seven Suns
 
-10\. “A long, long time after that,[\[1\]](#n1){:#ref1} a great, dark gale rises. It blows the ocean’s water, which is 84,000 yojanas deep. The wind then divides into two. They grab the palace of the sun and place it halfway up Mount Sumeru, which is 42,000 yojanas away from the earth in the orbit of the sun. As a result of this, the world then has two suns that rise. When two suns rise, all the small rivers, streams, and brooks in the world dry up.”
+10\. “A long, long time after that,[\[2\]](#n2){:#ref2} a great, dark gale rises. It blows the ocean’s water, which is 84,000 yojanas deep. The wind then divides into two. They grab the palace of the sun and place it halfway up Mount Sumeru, which is 42,000 yojanas away from the earth in the orbit of the sun. As a result of this, the world then has two suns that rise. When two suns rise, all the small rivers, streams, and brooks in the world dry up.”
 {:#p10}
 
 11\. The Buddha told the monks, “You should know from this that all formed things are impermanent. They are liable to change and disintegrate, which makes them unreliable. Conditioned things are quite troublesome. You should seek the path of freedom that transcends the world.
@@ -188,7 +188,7 @@ next: DA_30-10.html
 56\. “[Again, by what events does Mount Yugandhara come to be?] After that, a windstorm blows a mass of foam to a place not far from Mount Īśādāra, and it spontaneously forms Mount Yugandhara. It’s 12,000 yojanas tall and 12,000 yojanas across. Its bounds are endless, it has a mix of assorted colors, and it’s made of the seven treasures. As a result of these events, Mount Yugandhara comes to be.
 {:#p56}
 
-57\. “[Again, by what events does Mount Aśvakarṇa come to be?] [\[2\]](#n2){:#ref2} After that, a windstorm blows a mass of foam to a place not far from Mount Yugandhara, and it spontaneously forms Mount Aśvakarṇa. It’s 6,000 yojanas tall and 6,000 yojanas across. Its bounds are endless, it has a mix of assorted colors, and it’s made of the seven treasures. As a result of these events, Mount Aśvakarṇa comes to be.
+57\. “[Again, by what events does Mount Aśvakarṇa come to be?] [\[3\]](#n3){:#ref3} After that, a windstorm blows a mass of foam to a place not far from Mount Yugandhara, and it spontaneously forms Mount Aśvakarṇa. It’s 6,000 yojanas tall and 6,000 yojanas across. Its bounds are endless, it has a mix of assorted colors, and it’s made of the seven treasures. As a result of these events, Mount Aśvakarṇa comes to be.
 {:#p57}
 
 58\. “[Again, by what events does Mount Nimindhara come to be?] After that, a windstorm blows a mass of foam to a place not far from Mount Aśvakarṇa, and it spontaneously forms Mount Nimindhara. It’s 3,000 yojanas tall and 3,000 yojanas across. Its bounds are endless, it has a mix of assorted colors, and it’s made of the seven treasures. As a result of these events, Mount Nimindhara comes to be.
@@ -361,10 +361,11 @@ next: DA_30-10.html
 
 ---
 
-### Endnotes
+### Notes
 
-1. {:#n1}This story is parallel to the Seven Suns Sutra (cf. [AN 7.66](https://suttacentral.net/an7.66){: target="_blank"} and [MĀ 8](../madhyama/MA_008.html){: target="_blank"}). [\[back\]](#ref1)
-2. {:#n2}Mount Sudarśana has been omitted from this section, probably an accidental copyist error given that the sizes of the mountains don’t match those found in Chapter 1 from this point until it’s corrected for Mount Cakravāḍa. [\[back\]](#ref2)
+1. {:#n1}This is Chapter 9 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0137b01" target="_blank">T1.1.137b1-41a20</a>). [\[back\]](#ref1)
+2. {:#n2}This story is parallel to the Seven Suns Sutra (cf. <a href="https://suttacentral.net/an7.66" target="_blank">AN 7.66</a> and <a href="../madhyama/MA_008.html" target="_blank">MĀ 8</a>. [\[back\]](#ref2)
+3. {:#n3}Mount Sudarśana has been omitted from this section, probably an accidental copyist error given that the sizes of the mountains don’t match those found in Chapter 1 from this point until it’s corrected for Mount Cakravāḍa. [\[back\]](#ref3)
 
 ---
 
@@ -372,4 +373,5 @@ Translator: Charles Patton
 {: .translator}
 Last Revised: 28 June 2022
 {: .revised}
+
 ---
